// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeAxisTicks() from band scale should compute ticks for bottom axis 1`] = `
Object {
  "textAlign": "center",
  "textBaseline": "top",
  "ticks": Array [
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "I",
      "x": 50,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "J",
      "x": 150,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "K",
      "x": 250,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "L",
      "x": 350,
      "y": 0,
    },
  ],
  "x": 0,
  "y": 400,
}
`;

exports[`computeAxisTicks() from band scale should compute ticks for left axis 1`] = `
Object {
  "textAlign": "right",
  "textBaseline": "middle",
  "ticks": Array [
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "I",
      "x": 0,
      "y": 50,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "J",
      "x": 0,
      "y": 150,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "K",
      "x": 0,
      "y": 250,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "L",
      "x": 0,
      "y": 350,
    },
  ],
  "x": 0,
  "y": 0,
}
`;

exports[`computeAxisTicks() from band scale should compute ticks for right axis 1`] = `
Object {
  "textAlign": "left",
  "textBaseline": "middle",
  "ticks": Array [
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "I",
      "x": 0,
      "y": 50,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "J",
      "x": 0,
      "y": 150,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "K",
      "x": 0,
      "y": 250,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "L",
      "x": 0,
      "y": 350,
    },
  ],
  "x": 600,
  "y": 0,
}
`;

exports[`computeAxisTicks() from band scale should compute ticks for top axis 1`] = `
Object {
  "textAlign": "center",
  "textBaseline": "bottom",
  "ticks": Array [
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "I",
      "x": 50,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "J",
      "x": 150,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "K",
      "x": 250,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "L",
      "x": 350,
      "y": 0,
    },
  ],
  "x": 0,
  "y": 0,
}
`;

exports[`computeAxisTicks() from linear scale should compute ticks for bottom axis 1`] = `
Object {
  "textAlign": "center",
  "textBaseline": "top",
  "ticks": Array [
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 50,
      "x": 10,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 100,
      "x": 20,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 150,
      "x": 30,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 200,
      "x": 40,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 250,
      "x": 50,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 300,
      "x": 60,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 350,
      "x": 70,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 400,
      "x": 80,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 450,
      "x": 90,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": 500,
      "x": 100,
      "y": 0,
    },
  ],
  "x": 0,
  "y": 400,
}
`;

exports[`computeAxisTicks() from linear scale should compute ticks for left axis 1`] = `
Object {
  "textAlign": "right",
  "textBaseline": "middle",
  "ticks": Array [
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 50,
      "x": 0,
      "y": 10,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 100,
      "x": 0,
      "y": 20,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 150,
      "x": 0,
      "y": 30,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 200,
      "x": 0,
      "y": 40,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 250,
      "x": 0,
      "y": 50,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 300,
      "x": 0,
      "y": 60,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 350,
      "x": 0,
      "y": 70,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 400,
      "x": 0,
      "y": 80,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 450,
      "x": 0,
      "y": 90,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": 500,
      "x": 0,
      "y": 100,
    },
  ],
  "x": 0,
  "y": 0,
}
`;

exports[`computeAxisTicks() from linear scale should compute ticks for right axis 1`] = `
Object {
  "textAlign": "left",
  "textBaseline": "middle",
  "ticks": Array [
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 50,
      "x": 0,
      "y": 10,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 100,
      "x": 0,
      "y": 20,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 150,
      "x": 0,
      "y": 30,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 200,
      "x": 0,
      "y": 40,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 250,
      "x": 0,
      "y": 50,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 300,
      "x": 0,
      "y": 60,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 350,
      "x": 0,
      "y": 70,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 400,
      "x": 0,
      "y": 80,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 450,
      "x": 0,
      "y": 90,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": 500,
      "x": 0,
      "y": 100,
    },
  ],
  "x": 600,
  "y": 0,
}
`;

exports[`computeAxisTicks() from linear scale should compute ticks for top axis 1`] = `
Object {
  "textAlign": "center",
  "textBaseline": "bottom",
  "ticks": Array [
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 50,
      "x": 10,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 100,
      "x": 20,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 150,
      "x": 30,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 200,
      "x": 40,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 250,
      "x": 50,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 300,
      "x": 60,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 350,
      "x": 70,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 400,
      "x": 80,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 450,
      "x": 90,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": 500,
      "x": 100,
      "y": 0,
    },
  ],
  "x": 0,
  "y": 0,
}
`;

exports[`computeAxisTicks() from ordinal scale should compute ticks for bottom axis 1`] = `
Object {
  "textAlign": "center",
  "textBaseline": "top",
  "ticks": Array [
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "A",
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "B",
      "x": 10,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "C",
      "x": 20,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "D",
      "x": 30,
      "y": 0,
    },
  ],
  "x": 0,
  "y": 400,
}
`;

exports[`computeAxisTicks() from ordinal scale should compute ticks for left axis 1`] = `
Object {
  "textAlign": "right",
  "textBaseline": "middle",
  "ticks": Array [
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "A",
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "B",
      "x": 0,
      "y": 10,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "C",
      "x": 0,
      "y": 20,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "D",
      "x": 0,
      "y": 30,
    },
  ],
  "x": 0,
  "y": 0,
}
`;

exports[`computeAxisTicks() from ordinal scale should compute ticks for right axis 1`] = `
Object {
  "textAlign": "left",
  "textBaseline": "middle",
  "ticks": Array [
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "A",
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "B",
      "x": 0,
      "y": 10,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "C",
      "x": 0,
      "y": 20,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "D",
      "x": 0,
      "y": 30,
    },
  ],
  "x": 600,
  "y": 0,
}
`;

exports[`computeAxisTicks() from ordinal scale should compute ticks for top axis 1`] = `
Object {
  "textAlign": "center",
  "textBaseline": "bottom",
  "ticks": Array [
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "A",
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "B",
      "x": 10,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "C",
      "x": 20,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "D",
      "x": 30,
      "y": 0,
    },
  ],
  "x": 0,
  "y": 0,
}
`;

exports[`computeAxisTicks() from point scale should compute ticks for bottom axis 1`] = `
Object {
  "textAlign": "center",
  "textBaseline": "top",
  "ticks": Array [
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "E",
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "F",
      "x": 100,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "G",
      "x": 200,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": 5,
      "textX": 0,
      "textY": 10,
      "value": "H",
      "x": 300,
      "y": 0,
    },
  ],
  "x": 0,
  "y": 400,
}
`;

exports[`computeAxisTicks() from point scale should compute ticks for left axis 1`] = `
Object {
  "textAlign": "right",
  "textBaseline": "middle",
  "ticks": Array [
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "E",
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "F",
      "x": 0,
      "y": 100,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "G",
      "x": 0,
      "y": 200,
    },
    Object {
      "lineX": -5,
      "lineY": 0,
      "textX": -10,
      "textY": 0,
      "value": "H",
      "x": 0,
      "y": 300,
    },
  ],
  "x": 0,
  "y": 0,
}
`;

exports[`computeAxisTicks() from point scale should compute ticks for right axis 1`] = `
Object {
  "textAlign": "left",
  "textBaseline": "middle",
  "ticks": Array [
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "E",
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "F",
      "x": 0,
      "y": 100,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "G",
      "x": 0,
      "y": 200,
    },
    Object {
      "lineX": 5,
      "lineY": 0,
      "textX": 10,
      "textY": 0,
      "value": "H",
      "x": 0,
      "y": 300,
    },
  ],
  "x": 600,
  "y": 0,
}
`;

exports[`computeAxisTicks() from point scale should compute ticks for top axis 1`] = `
Object {
  "textAlign": "center",
  "textBaseline": "bottom",
  "ticks": Array [
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "E",
      "x": 0,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "F",
      "x": 100,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "G",
      "x": 200,
      "y": 0,
    },
    Object {
      "lineX": 0,
      "lineY": -5,
      "textX": 0,
      "textY": -10,
      "value": "H",
      "x": 300,
      "y": 0,
    },
  ],
  "x": 0,
  "y": 0,
}
`;
